# FinancialAnalysisAgents

./: .gitignore  README.md
economic_indicator_agent/: App.py  data_fetcher.py  economic_indicator_2024.json  fine-tuning.jsonl  fine_tune_id.json
economic_indicator_agent/API_Key/: api_key.toml
financial_statement_agent/: pyproject.toml
financial_statement_agent/financial_statement_agent/: example.py
financial_statement_analysis_agent/financial_statement_agent/: extraction.py
statement_analysis_agent/: README.md  pyproject.toml
statement_analysis_agent/statement_analysis_agent/: analysis_agent.py
stock_data_agent/: pyproject.toml
stock_data_agent/stock_data_agent/: __init__.py
