[project]
name = "stock-data-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Brian Huang",email = "uoapuoap@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai (>=1.59.6,<2.0.0)",
    "pandas-ta (>=0.3.14b0,<0.4.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "numpy (==1.26.4)",
    "yfinance (>=0.2.51,<0.3.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
